--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
     <title>box</title>
 </head>
 <body>
-    
     <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
